# warp-engine

./:  .dockerignore  .env.example  .gitignore  CHICKEN_AGENT_GUIDE.md  DEPLOYMENT.md  Dockerfile  PRODUCTION.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SERVICE_ARCHITECTURE.md  STAGING_PROTOCOL.md  WARP.HELP.md  WARP.md  alpic_mcp_entry.py  buildspec.yml  config.api.json  deploy.py  docker-compose.yml  install.sh  log.txt  main.py  mcp.py  mcp_server.py  mcp_transport.py  pyproject.toml  requirements.txt  reset.sh  warp-engine  warp-engine-client  warp-engine-service  warp-engine-staged
scripts/: backup.sh  deploy.sh  health_check.py
src/warpengine/: __init__.py  cli.py  config.py
src/warpengine/agent_builder/: enhanced_generator.py  generator.py
src/warpengine/agents/: __init__.py
src/warpengine/agents/test_chicken_agent/: runner.py
src/warpengine/api/: client.py  openai_client.py
src/warpengine/client/: __init__.py  engine_client.py
src/warpengine/metrics/: __init__.py  analysis.py  text_stats.py
src/warpengine/orchestrator/: chain.py
src/warpengine/prompt_refiner/: __init__.py  refiner.py  templates.py
src/warpengine/registry/: registry.py
src/warpengine/server/: engine_service.py  ui.py
src/warpengine/staging/: __init__.py  code_injector.py  meta_lookup.py  stage_manager.py
src/warpengine/storage/: cache.py
src/warpengine/warp_integration/: __init__.py  mcp_server.py  warp_client.py
tests/: test_metrics.py  test_orchestrator.py  test_registry.py  test_server.py
