[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warp-engine"
version = "0.1.0"
description = "Local A2A workflow orchestrator with LaTeX UI and 3-agent chain"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "requests>=2.31.0",
  "python-multipart>=0.0.9"
]

[project.scripts]
warp-engine = "warpengine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

