[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warp-engine"
version = "2.0.0"
description = "Universal Agent Protocol - Warp Terminal Integration for AI Agent Development"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Warp Engine Team" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "requests>=2.31.0",
  "python-multipart>=0.0.9",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "rich>=13.0.0",
  "websockets>=12.0",
  "aiofiles>=23.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "httpx>=0.27.2"
]

[project.scripts]
warp-engine = "warpengine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
pythonpath = ["src"]

